[gd_scene load_steps=6 format=3 uid="uid://gnsktgb1137n"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_80xtg"]
[ext_resource type="Script" uid="uid://dovo7udsgruet" path="res://addons/CustomControls/Dialogs/CommandEvents/command_base_dialog.gd" id="2_cn78j"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="3_f0ttl"]

[sub_resource type="Gradient" id="Gradient_7ascj"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ourej"]
gradient = SubResource("Gradient_7ascj")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[node name="CommandBaseDialog" type="Window"]
title = "Command Dialog Base"
position = Vector2i(0, 36)
size = Vector2i(400, 67)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_80xtg")
script = ExtResource("2_cn78j")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ourej")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("3_f0ttl")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("3_f0ttl")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
text = "CANCEL"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
